--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" data-color-mode="light" data-light-theme="light" data-dark-theme="dark" data-a11y-animated-images="system">
-  <head><title>Powering Chatbots leveraging Large Language Models</title></head>
-  <body>
-    <iframe src="https://youtube.com" width="100%" height="100%"></iframe>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Chatbots leveraging Large Language Models</title>
+
+    <style rel="stylesheet">
+        html,body{
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
+</head>
+<body>
+    <iframe src="http://20.102.51.168:8888/" width="100%" height="100%"/>
+</body>
 </html>
