--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     </style>
 </head>
 <body>
-    <iframe src="http://20.102.51.168:8888/" width="100%" height="100%"/>
+    <iframe src="https://tldt.eastus.cloudapp.azure.com:8888/" width="100%" height="100%"/>
 </body>
 </html>
