--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             margin: 0;
             padding: 0;
         }
+        
+        iframe{
+            border: 0;
     </style>
 </head>
 <body>
