--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-    <iframe src="https://tldt.eastus.cloudapp.azure.com:8888/" width="100%" height="100%"/>
+    <iframe src="https://llm-chat-web-jresw.run-us-west2.goorm.site/" width="100%" height="100%"/>
 </body>
 </html>
